# foster-btree

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  latchtest.cpp  simplebench.cpp  simplebench.h
doc/: Doxyfile  START_HERE.md
src/: CMakeLists.txt  adoption.h  assertions.h  btree.h  btree_adoption.h  btree_level.h  btree_static.h  debug_log.h  default_templates.h  dummies.h  encoding.h  exceptions.h  fenster.h  fenster_node.h  kv_array.h  latch_mutex.h  logrec.h  lrtype.h  main.cpp  metaprog.h  move_records.h  node.h  node_foster.h  node_mgr.h  node_refactored.h  node_trunc.h  pointers.h  search.h  slot_array.h  sorted_list.h
test/: CMakeLists.txt  test_btree.cpp  test_btree_static.cpp  test_encoding.cpp  test_kvarray.cpp  test_node.cpp  test_node_simple.cpp  test_slotarray.cpp  test_sorted_list.cpp
